creates css for start button and home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container"></div>
-    <div id="home" class="flex-center flex column"></div>
+    <div class="container">
+        <div id="home" class="flex-cen flex-col">
+            <h1>Quiz</h1>
+            <a class="btn" href="/game.html">Start Quiz</a>
+            <a class="btn" href="/topScore.html">Top Scores</a>
+        </div>
+    </div>
+    
 </body>
 </html>
