--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="home" class="flex-cen flex-col">
             <h1>Quiz</h1>
-            <a class="btn" href="/game.html">Start Quiz</a>
+            <a class="btn" href="/quizPage.html">Start Quiz</a>
             <a class="btn" href="/topScore.html">Top Scores</a>
         </div>
     </div>
