--- a/quizPage.html
+++ b/quizPage.html
@@ -11,24 +11,25 @@
 <body>
     <div class="container">
       <div id="game" class="justify-cen flex-col">
-        <h2 id="quesiton">What is the right answer to this questions?</h2>
-        <div class="choice-container">
-          <p class="choice-prefix">A</p>
-          <p class="choice-text">Choice 1</p>
+        <h2 id="question">What is the right answer to this questions?</h2>
+        <div class="option-container">
+          <p class="option-prefix">A</p>
+          <p class="option-text" data-option="1">Choice 1</p>
         </div>
-        <div class="choice-container">
-          <p class="choice-prefix">B</p>
-          <p class="choice-text">Choice 2</p>
+        <div class="option-container">
+          <p class="option-prefix">B</p>
+          <p class="option-text" data-option="2">Choice 2</p>
         </div>
-        <div class="choice-container">
-          <p class="choice-prefix">C</p>
-          <p class="choice-text">Choice 3</p>
+        <div class="option-container">
+          <p class="option-prefix">C</p>
+          <p class="option-text" data-option="3">Choice 3</p>
         </div>
-        <div class="choice-container">
-          <p class="choice-prefix">D</p>
-          <p class="choice-text">Choice 4</p>
+        <div class="option-container">
+          <p class="option-prefix">D</p>
+          <p class="option-text" data-option="4">Choice 4</p>
         </div>
       </div>
     </div>
+  <script src="index.js"></script>
 </body>
 </html>
