Added point calculator and question counter

--- a/quizPage.html
+++ b/quizPage.html
@@ -11,6 +11,24 @@
 <body>
     <div class="container">
       <div id="game" class="justify-cen flex-col">
+        <!-- question counter -->
+        <div id="displayQuestion">
+          <div id="displayQuestion-item">
+            <p class="displayQuestion-prefix">
+              Question
+            </p>
+            <h1 class="displayQuestion-main-text" id="questionCounter"></h1>
+          </div>
+          <div id="displayQuestion-item">
+            <p class="displayQuestion-prefix">
+              Score
+            </p>
+            <h1 class="hdisplayQuestion-main-text" id="point">
+              0
+            </h1>
+          </div>
+        </div>
+        <!-- questiion -->
         <h2 id="question">What is the right answer to this questions?</h2>
         <div class="option-container">
           <p class="option-prefix">A</p>
