Added progress bar functionality and css

--- a/quizPage.html
+++ b/quizPage.html
@@ -14,10 +14,14 @@
         <!-- question counter -->
         <div id="displayQuestion">
           <div id="displayQuestion-item">
-            <p class="displayQuestion-prefix">
+            <p id="progressText" class="displayQuestion-prefix">
               Question
             </p>
-            <h1 class="displayQuestion-main-text" id="questionCounter"></h1>
+            <!-- dispay progress bar -->
+            <div id="progressBar">
+              <div id="progressFull"></div>
+            </div>
+            <!-- <h1 class="displayQuestion-main-text" id="questionCounter"></h1> -->
           </div>
           <div id="displayQuestion-item">
             <p class="displayQuestion-prefix">
