creates complete page, functionality and css

--- a/quizPage.html
+++ b/quizPage.html
@@ -25,7 +25,7 @@
           </div>
           <div id="displayQuestion-item">
             <p class="displayQuestion-prefix">
-              Score
+              Point
             </p>
             <h1 class="hdisplayQuestion-main-text" id="point">
               0
