--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="home" class="flex-cen flex-col">
             <h1>Quiz</h1>
             <a class="btn" href="/quizPage.html">Start Quiz</a>
-            <a class="btn" href="/topScore.html">Top Scores</a>
+            <a class="btn" href="/topPoints.html">Top Points</a>
         </div>
     </div>
     
