--- a/quizPage.html
+++ b/quizPage.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container">
-      <div id="game" class="justify-cen flex-col">
+      <!-- loader -->
+         <div id="loader"></div>
+      <div id="quiz" class="justify-cen flex-col hidden">
         <!-- question counter -->
         <div id="displayQuestion">
           <div id="displayQuestion-item">
@@ -33,22 +35,22 @@
           </div>
         </div>
         <!-- questiion -->
-        <h2 id="question">What is the right answer to this questions?</h2>
+        <h2 id="question"></h2>
         <div class="option-container">
           <p class="option-prefix">A</p>
-          <p class="option-text" data-option="1">Choice 1</p>
+          <p class="option-text" data-option="1"></p>
         </div>
         <div class="option-container">
           <p class="option-prefix">B</p>
-          <p class="option-text" data-option="2">Choice 2</p>
+          <p class="option-text" data-option="2"></p>
         </div>
         <div class="option-container">
           <p class="option-prefix">C</p>
-          <p class="option-text" data-option="3">Choice 3</p>
+          <p class="option-text" data-option="3"></p>
         </div>
         <div class="option-container">
           <p class="option-prefix">D</p>
-          <p class="option-text" data-option="4">Choice 4</p>
+          <p class="option-text" data-option="4"></p>
         </div>
       </div>
     </div>
