cleaning and modified README

--- a/completed/complete.html
+++ b/completed/complete.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Completed!</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="../index.css" />
     <link rel="stylesheet" href="complete.css" />
   </head>
   <body>
@@ -29,7 +29,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/quizPage.html">Start again</a>
+        <a class="btn" href="../quizPage.html">Start again</a>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
