--- a/Point/topPoints.html
+++ b/Point/topPoints.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Top Points</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="topPoints.css" />
+    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="../Point/topPoints.css" />
   </head>
   <body>
     <div class="container">
@@ -16,6 +16,6 @@
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="topPoints.js"></script>
+    <script src="../Point/topPoints.js"></script>
   </body>
 </html>
