--- a/QuizPage/quizPage.html
+++ b/QuizPage/quizPage.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="quizPage.css">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../QuizPage/quizPage.css">
 </head>
 <body>
     <div class="container">
@@ -54,6 +54,6 @@
         </div>
       </div>
     </div>
-  <script src="index.js"></script>
+  <script src="../index.js"></script>
 </body>
 </html>
