--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div id="home" class="flex-cen flex-col">
             <h1>Quiz</h1>
-            <a class="btn" href="/quizPage.html">Start Quiz</a>
-            <a class="btn" href="/topPoints.html">Top Points</a>
+            <a class="btn" href="./QuizPage/quizPage.html">Start Quiz</a>
+            <a class="btn" href="./Point/topPoints.html">Top Points</a>
         </div>
     </div>
     
