--- a/complete.html
+++ b/complete.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Completed!</title>
-    <link rel="stylesheet" href="../index.css" />
-    <link rel="stylesheet" href="complete.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/completed/complete.css" />
   </head>
   <body>
     <div class="container">
@@ -33,6 +33,6 @@
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="complete.js"></script>
+    <script src="/completed/complete.js"></script>
   </body>
 </html>
