--- a/complete.html
+++ b/complete.html
@@ -29,7 +29,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="../quizPage.html">Start again</a>
+        <a class="btn" href="/QuizPage/quizPage.html">Start again</a>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
